# lazy.tmux

./: Cargo.toml  README.md  benches.txt  justfile  rustfmt.toml
.github/workflows/: ci.yml  release.yml
benches/: plugin_install.rs
completions/: _roxide  roxide.bash  roxide.elv  roxide.fish
examples/: plugins.toml
src/: args.rs  config.rs  error.rs  git.rs  lib.rs  main.rs  path.rs  plugins.rs
tests/: install.rs
