[package]
name = "lazy-tmux"
version = "0.1.11"
edition = "2024"

[dependencies]
ecow = "0.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.8"
thiserror = "2.0"
walkdir = "2"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
