[package]
name = "lazy-tmux"
version = "0.1.11"
edition = "2024"

[dependencies]
ecow = "0.2.5"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0.0"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.8"
thiserror = "2.0"
walkdir = "2"

[dev-dependencies]
criterion = "0.6"
dirs = "6.0.0"

[[bench]]
name = "plugin_install"
harness = false

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[profile.bench]
lto = false

